<resources>
    <string name="app_name">Reminders</string>
    <string name="create">createbutton</string>
    <string name="todo">TODO</string>
    <string name="datehint">Select Date</string>
    <string name="timehint">Select time</string>
    <string name="subjecthint">Enter Subject</string>
    <string name="submit">Submit</string>
    <string name="vip">VIP</string>
    <string name="calendar">calendar</string>
    <string name="clock">clock</string>
    <string name="textview">TextView</string>
    <string name="stop">stop</string>
    <string name="Navigation_Drawer">navigation_drawer</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="backup_prompt">We need your google account to backup your Data</string>
    <string name="signinrequest">Please Sign In</string>
</resources>