<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account_icon"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_icon"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rate_icon"
            android:title="@string/rate"/>

    </group>

</menu>